@@ -5,7 +5,7 @@ license          = Perl_5
 copyright_holder = Kent Fredric <kentnl@cpan.org>
 
 ; Uncomment this to bootstrap via self 
-[=inc::lib]
+[Bootstrap::lib]
 
 [@KENTNL]
 version_major     = 0
